update link paper

--- a/publications.html
+++ b/publications.html
@@ -41,9 +41,9 @@ MathJax.Hub.Config({
 
 <ul>
 <li>
-    <b><a href="papers/Geometric_Laplace.pdf">A geometric Laplace expansion</a></b> <br>
+    <b><a href="https://arxiv.org/pdf/2212.04376.pdf">A geometric Laplace method</a></b> <br>
     Flavien Léger and François-Xavier Vialard. <br>
-    2022.
+    arXiv:2212.04376, 2022. 
 </li>
 
 
