add new paper gradient descent

--- a/publications.html
+++ b/publications.html
@@ -37,9 +37,17 @@ MathJax.Hub.Config({
 
 <h1>Publications and preprints</h1>
 
-<h2>2022</h2>
+<h2>2022-2023</h2>
 
 <ul>
+<li>
+    <b><a href="https://arxiv.org/pdf/2305.04917.pdf">Gradient descent with a general cost</a></b> <br>
+    Flavien Léger and Pierre-Cyril Aubin-Frankowski. <br>
+    arXiv:2305.04917, 2023. 
+</li>
+
+
+
 <li>
     <b><a href="https://arxiv.org/pdf/2212.04376.pdf">A geometric Laplace method</a></b> <br>
     Flavien Léger and François-Xavier Vialard. <br>
