--- a/slides.html
+++ b/slides.html
@@ -36,30 +36,14 @@ MathJax.Hub.Config({
 
 
 
-<h1>Selected talks</h1>
+<h1>Recent talks</h1>
 
-<h3>Université de Lille, séminaire ANEDP (sept 2022)</h3>
+<h3>ENS Lyon, Machine Learning and Signal Processing seminar (sept 2023)</h3>
 <p>
-<a href="https://slides.com/flavienleger/z-mappings">Z-mappings for mathematicians</a>
+<a href="https://slides.com/flavienleger/gradient-descent-with-a-general-cost">Gradient descent with a general cost</a>
 </p>
 
 
-<h3>MokaMeetings (jan 2021)</h3>
-<p>
-<a href="https://slides.com/flavienleger/wasserstein-gradient-flows">The back-and-forth method for Wasserstein gradient flows</a>
-</p>
-
-
-<h3>MokaMeetings (apr 2020)</h3>
-<p>
-<a href="https://slides.com/flavienleger/backandforth">The back-and-forth method</a>
-</p>
-
-
-<h3>VU Amsterdam math colloquium (jan 2020)</h3>
-<p>
-<a href="resources/slides_sb_2020jan.key">The Schrödinger bridge problem</a> (Keynote .key file, 20 MB)
-</p>
 
 
 
