--- a/slides.html
+++ b/slides.html
@@ -38,6 +38,13 @@ MathJax.Hub.Config({
 
 <h1>Recent talks</h1>
 
+
+<h3>Iowa State, Geometric Analysis Seminar (oct 2023)</h3>
+<p>
+<a href="https://slides.com/flavienleger/cross-curvature-isu">Cross-curvature: new areas of applications</a>
+</p>
+
+
 <h3>ENS Lyon, Machine Learning and Signal Processing seminar (sept 2023)</h3>
 <p>
 <a href="https://slides.com/flavienleger/gradient-descent-with-a-general-cost">Gradient descent with a general cost</a>
