--- a/slides.html
+++ b/slides.html
@@ -39,6 +39,13 @@ MathJax.Hub.Config({
 <h1>Recent talks</h1>
 
 
+<h3>Bocconi University, Analysis and Applied Mathematics Seminar Series (oct 2023)</h3>
+<p>
+<a href="https://slides.com/flavienleger/cross-curvature-boc">Cross-curvature: new areas of applications</a>
+</p>
+
+
+
 <h3>Iowa State, Geometric Analysis Seminar (oct 2023)</h3>
 <p>
 <a href="https://slides.com/flavienleger/cross-curvature-isu">Cross-curvature: new areas of applications</a>
