--- a/slides/index.html
+++ b/slides/index.html
@@ -103,11 +103,9 @@
   </header>
 
   <article>
-    <p><strong>1. PGMO Days</strong>. <a href="/assets/slides/pgmodays-11-28-gdgc.pdf"><strong>Gradient descent with a general cost</strong></a> (EDF Lab, nov 2023).</p>
+    <p><strong>1.</strong> <a href="https://slides.com/flavienleger/spo-2023-12-04-gradient-descent-with-a-general-cost" rel="external nofollow noopener" target="_blank"><strong>Gradient descent with a general cost</strong></a></p>
 
-<p><strong>2. Bocconi University</strong>. <a href="https://slides.com/flavienleger/cross-curvature-boc" rel="external nofollow noopener" target="_blank"><strong>Cross-curvature: new areas of applications</strong></a> (Analysis and Applied Mathematics Seminar Series, oct 2023).</p>
-
-<p><strong>3. ENS Lyon</strong>. <a href="https://slides.com/flavienleger/gradient-descent-with-a-general-cost" rel="external nofollow noopener" target="_blank"><strong>Gradient descent with a general cost</strong></a> (Machine Learning and Signal Processing seminar, sept 2023).</p>
+<p><strong>2.</strong> <a href="https://slides.com/flavienleger/z-mappings-toronto" rel="external nofollow noopener" target="_blank"><strong>Z-mappings for mathematicians</strong></a></p>
 
   </article>
 </div>
