--- a/papers/index.html
+++ b/papers/index.html
@@ -111,7 +111,7 @@ arXiv:2311.10208, 2023.</li>
 <a href="https://arxiv.org/abs/2305.04917" rel="external nofollow noopener" target="_blank"><strong>Gradient descent with a general cost</strong></a><br>
 Flavien Léger and Pierre-Cyril Aubin-Frankowski. <br>
 arXiv:2305.04917, 2023. <br>
-[<a href="https://slides.com/flavienleger/gradient-descent-with-a-general-cost" rel="external nofollow noopener" target="_blank">Slides</a>]</li>
+[<a href="/assets/slides/gdgc.pdf">Slides</a>]</li>
   <li>
 <a href="https://arxiv.org/abs/2212.04376" rel="external nofollow noopener" target="_blank"><strong>A geometric Laplace method</strong></a><br>
 Flavien Léger and François-Xavier Vialard.<br>
