--- a/slides/index.html
+++ b/slides/index.html
@@ -103,7 +103,7 @@
   </header>
 
   <article>
-    <p><strong>1.</strong> <a href="https://slides.com/flavienleger/spo-2023-12-04-gradient-descent-with-a-general-cost" rel="external nofollow noopener" target="_blank"><strong>Gradient descent with a general cost</strong></a></p>
+    <p><strong>1.</strong> <a href="/assets/slides/gdgc.pdf"><strong>Gradient descent with a general cost</strong></a></p>
 
 <p><strong>2.</strong> <a href="https://slides.com/flavienleger/z-mappings-toronto" rel="external nofollow noopener" target="_blank"><strong>Z-mappings for mathematicians</strong></a></p>
 
