--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@
           </div>
 
           <div class="clearfix">
-            <div class="media mb-2">
+            <p> </p>
+
+<div class="media">
 	<!-- <div class="media-left media-middle">		 -->
     	<i class="align-self-center mr-3 fa fa-briefcase"></i>
 	<!-- </div> -->
