--- a/slides/index.html
+++ b/slides/index.html
@@ -103,9 +103,11 @@
   </header>
 
   <article>
-    <p><strong>1.</strong> <a href="/assets/slides/gdgc.pdf"><strong>Gradient descent with a general cost</strong></a></p>
+    <p><strong>1.</strong> <a href="https://slides.com/flavienleger/sigma-mode-2024-01-30-geometry-am" rel="external nofollow noopener" target="_blank"><strong>An intrinsic geometry for alternating minimization</strong></a></p>
 
-<p><strong>2.</strong> <a href="https://slides.com/flavienleger/z-mappings-toronto" rel="external nofollow noopener" target="_blank"><strong>Z-mappings for mathematicians</strong></a></p>
+<p><strong>2.</strong> <a href="/assets/slides/gdgc.pdf"><strong>Gradient descent with a general cost</strong></a></p>
+
+<p><strong>3.</strong> <a href="https://slides.com/flavienleger/z-mappings-toronto" rel="external nofollow noopener" target="_blank"><strong>Z-mappings for mathematicians</strong></a></p>
 
   </article>
 </div>
@@ -116,7 +118,7 @@
     <!-- Footer -->    
     <footer class="fixed-bottom">
       <div class="container mt-0">
-        © Copyright 2023 Flavien  Léger. 
+        © Copyright 2024 Flavien  Léger. 
       </div>
     </footer>
 
