--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 	<!-- </div> -->
 	<div class="media-body">
 		INRIA Paris, team <a href="https://team.inria.fr/mokaplan" rel="external nofollow noopener" target="_blank">MOKAPLAN</a> <br>
-		Office A427.
+		<a href="https://www.ceremade.dauphine.fr" rel="external nofollow noopener" target="_blank">CEREMADE</a>, Université Paris Dauphine.
 	</div>
 </div>
 
