--- a/papers/index.html
+++ b/papers/index.html
@@ -100,13 +100,17 @@
   <article>
     <h1 id="publications-and-preprints">Publications and preprints</h1>
 
-<h4 id="20222023">2022–2023</h4>
+<h4 id="20222024">2022–2024</h4>
 
 <ul>
   <li>
+<a href="https://arxiv.org/abs/2409.18112" rel="external nofollow noopener" target="_blank"><strong>Nonnegative cross-curvature in infinite dimensions: synthetic definition and spaces of measures</strong></a><br>
+Flavien Léger, Gabriele Todeschi, François-Xavier Vialard. <br>
+arXiv:2409.18112, 2024.</li>
+  <li>
 <a href="https://arxiv.org/abs/2311.10208" rel="external nofollow noopener" target="_blank"><strong>A geometric approach to apriori estimates for optimal transport maps</strong></a><br>
 Simon Brendle, Flavien Léger, Robert J. McCann and Cale Rankin. <br>
-arXiv:2311.10208, 2023.</li>
+<em>J. Reine Angew. Math.</em> (2024), no. 0</li>
   <li>
 <a href="https://arxiv.org/abs/2305.04917" rel="external nofollow noopener" target="_blank"><strong>Gradient descent with a general cost</strong></a><br>
 Flavien Léger and Pierre-Cyril Aubin-Frankowski. <br>
@@ -115,7 +119,7 @@ arXiv:2305.04917, 2023. <br>
   <li>
 <a href="https://arxiv.org/abs/2212.04376" rel="external nofollow noopener" target="_blank"><strong>A geometric Laplace method</strong></a><br>
 Flavien Léger and François-Xavier Vialard.<br>
-<em>Pure and Applied Analysis</em>, 2023 (accepted).</li>
+<em>Pure and Applied Analysis</em> 5 (4), 1041-1080.</li>
   <li>
 <a href="https://arxiv.org/abs/2206.08873" rel="external nofollow noopener" target="_blank"><strong>Mirror Descent with Relative Smoothness in Measure Spaces, with application to Sinkhorn and EM</strong></a> <br>
 Pierre-Cyril Aubin-Frankowski, Anna Korba and Flavien Léger. <br>
@@ -185,7 +189,7 @@ In <em>IEEE International Conference on Acoustics, Speech, and Signal Processing
     <!-- Footer -->    
     <footer class="fixed-bottom">
       <div class="container mt-0">
-        © Copyright 2023 Flavien  Léger. 
+        © Copyright 2024 Flavien  Léger. 
       </div>
     </footer>
 
