--- a/slides/index.html
+++ b/slides/index.html
@@ -103,11 +103,11 @@
   </header>
 
   <article>
-    <p><strong>1.</strong> <a href="https://slides.com/flavienleger/nncc-spaces-in-optimization" rel="external nofollow noopener" target="_blank"><strong>NNCC spaces in optimization</strong></a></p>
+    <p><strong>1.</strong> <a href="/assets/slides/lecture-para-Kahler.pdf"><strong>A lecture on the interface between information geometry, optimization and optimal transport</strong></a></p>
 
-<p><strong>2.</strong> <a href="https://slides.com/flavienleger/moka10-2024-06-04-nncc" rel="external nofollow noopener" target="_blank"><strong>Spaces of measures with nonnegative cross-curvature</strong></a></p>
+<p><strong>2.</strong> <a href="https://slides.com/flavienleger/pisa-2024-12-03-mm-nncc" rel="external nofollow noopener" target="_blank"><strong>Minimizing movements with general costs, and nonnegative cross-curvature in infinite dimensions</strong></a></p>
 
-<p><strong>3.</strong> <a href="https://slides.com/flavienleger/sigma-mode-2024-01-30-geometry-am" rel="external nofollow noopener" target="_blank"><strong>An intrinsic geometry for alternating minimization</strong></a></p>
+<p><strong>3.</strong> <a href="https://slides.com/flavienleger/nncc-spaces-in-optimization" rel="external nofollow noopener" target="_blank"><strong>NNCC spaces in optimization</strong></a></p>
 
 <p><strong>4.</strong> <a href="/assets/slides/gdgc.pdf"><strong>Gradient descent with a general cost</strong></a></p>
 
